<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     style="@style/ScreenBackground"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".uiModel.CategoriesFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ScreenBackground"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="29sp"
        style="@style/TextColor"
         android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_weight="1.5"
        android:text="@string/pick_your_category_nof_interest"/>


         <LinearLayout
             style="@style/horizontalLinearLayoutStyle">
              <androidx.cardview.widget.CardView
                  android:id="@+id/sport"
                  style="@style/cardViewStyle">

                  <LinearLayout
                      style="@style/linearLayoutStyle"
                      tools:ignore="UseCompoundDrawables">
                      <ImageView
                          style="@style/imgStyle"
                          tools:ignore="ContentDescription"
                          android:src="@drawable/img_1" />
                      <TextView
                        style="@style/textStyle"
                          android:text="@string/sports" />
                  </LinearLayout>
              </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:id="@+id/science"
                 style="@style/cardViewStyle">
                 <LinearLayout
                     style="@style/linearLayoutStyle"
                     tools:ignore="UseCompoundDrawables">
                     <ImageView
                         style="@style/imgStyle"
                         tools:ignore="ContentDescription"
                         android:src="@drawable/img_3" />

                     <TextView
                        style="@style/textStyle"
                         android:text="@string/science" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>


         </LinearLayout>
    <LinearLayout
       style="@style/horizontalLinearLayoutStyle">
        <androidx.cardview.widget.CardView
            android:id="@+id/business"
            style="@style/cardViewStyle">
            <LinearLayout
                style="@style/linearLayoutStyle"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    style="@style/imgStyle"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/img_2"
                    />

                <TextView
                  style="@style/textStyle"
                    android:text="@string/business" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/technology"
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    style="@style/imgStyle"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/img_4"
                    />

                <TextView
                  style="@style/textStyle"
                    android:text="@string/technology" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

        <LinearLayout
            style="@style/horizontalLinearLayoutStyle"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/health"
                style="@style/cardViewStyle">
                <LinearLayout
                     style="@style/linearLayoutStyle"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                         style="@style/imgStyle"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_8" />
                    <TextView
                       style="@style/textStyle"
                        android:text="@string/health" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/entertainment"
                style="@style/cardViewStyle">
                <LinearLayout
                    style="@style/linearLayoutStyle"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        style="@style/imgStyle"
                        tools:ignore="ContentDescription"
                        android:src="@drawable/img_9" />

                    <TextView
                       style="@style/textStyle"
                        android:text="@string/entertainment" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


</LinearLayout>


</FrameLayout>